--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -4,6 +4,14 @@ body {
   align-items: center;
   height: 99vh;
 }
+button {
+  font-size: 16px;
+  height: 50px;
+  width: 180px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
 
 #container {
   display: flex;
@@ -12,13 +20,23 @@ body {
   flex-direction: column;
 }
 
-#btn-container{
+#btn-container {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
-hr{
+
+hr {
   border: 50px solid white;
+}
+
+@media (max-width: 800px) {
+  body {
+    padding: 50px;
+  }
+  hr {
+    border: 10px solid white;
+  }
 }
 
 #light-bg-color {
